--- a/client/src/components/shop-list-item/shop-list-item.css
+++ b/client/src/components/shop-list-item/shop-list-item.css
@@ -5,8 +5,11 @@
 }
 
 .shop-list-item__btn {
+  position: relative;
   width: 35px;
   margin: 3px;
+  background-color: rgba(255,255,255, 0.6); /* for closed stores */
+  z-index: 1;
 }
 
 .shop-list-item__name b {
@@ -14,4 +17,9 @@
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 1.2;
+}
+
+.shop-list-item__checkbox-label {
+  display: inline-block;
+  cursor: pointer;
 }
