Add adding, deleting, editing timeOffs functionality

--- a/client/src/components/day-list/day-list.css
+++ b/client/src/components/day-list/day-list.css
@@ -2,3 +2,19 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.day-list__time-off {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.day-list__time-off label {
+  margin-bottom: 0;
+  max-width: 300px;
+}
+
+.day-list__del-time-off {
+
+}
